<resources>
    <string name="app_name">邮你帮</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="tishi0">登陆成功后</string>
    <string name="tishi">即可查看于总靓照</string>
    <string name="name">账 号:</string>
    <string name="password"> 密 码：</string>
    <string name="name1">    请输入手机号</string>
    <string name="password1"> 请输入密码(6~18位）</string>
    <string name="button">点击我抽于总一巴掌</string>
    <string name="toastlogin">成功甩了于总一耳光</string>
    <string name="regist">新用户注册</string>
    <string name="SIGN">登录</string>
    <string name="passwordold">旧密码：</string>
    <string name="passwordvnew"> 新密码：</string>
    <string name="Forgetpwd">忘记密码？</string>
    <string name="passwordold1"> 请输入旧密码：</string>
    <string name="passwordnew2">请输入新密码：</string>
    <string name="passwordregist">  密  码：</string>
    <string name="passwordRegistconfirm"> 确认密码：</string>
    <string name="mewpwd">新密码</string>
    <string name="Confirm">确认</string>
    <string name="REPWD">修改密码</string>
    <drawable name="btn_notpress">#1591f9</drawable>
    <drawable name="btn_ispress">#87acca</drawable>
    <string name="cancel">取消</string>
    <string name="title">请选择执行时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">状态信息</string>
    <string name="current_date">当前状态</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
</resources>
