<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    tools:context=".LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/backlogin"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/Textregist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="320dp"
        android:textColor="#fffc48"
        android:text="@string/regist" />

    <LinearLayout android:id="@+id/tishi0"
        android:layout_height="wrap_content"
        android:layout_width="390dp"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

    </LinearLayout>
    <LinearLayout android:id="@+id/tishi"
        android:layout_height="wrap_content"
        android:layout_width="390dp"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewid"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:src="@drawable/username" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="10dp"
            android:textColor="#ec0909" />

        <EditText
            android:id="@+id/name2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColorHint="#f46565"
            android:background="@drawable/inputbackgroud"
            android:hint="@string/name1"
            android:inputType="number"
            android:padding="10dp"
            android:maxLines="1"
            android:textSize="14sp">

        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/name">
        <ImageView
            android:id="@+id/imageViewpwd"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:src="@drawable/userpassword" />
        <TextView android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/password"
            android:textColor="#f20b0b"/>
        <EditText android:id="@+id/textpassword"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:background="@drawable/inputbackgroud"
            android:inputType="textPassword"
            android:textColorHint="#f46868"
            android:padding="10dp"
            android:maxLines="1"
            android:hint="@string/password1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="131dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:background="@drawable/btn_pressed"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:textColor="#fff"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="260dp"
        android:text="@string/SIGN" />

    <TextView
        android:id="@+id/fgpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
       android:layout_marginTop="320dp"
        android:layout_marginStart="15dp"
        android:textColor="#f7dd5d"
        android:text="@string/REPWD" />
</RelativeLayout>