<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout tools:context=".RegistActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/backrpwd"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/textbackground"
            android:text="@string/name"
            android:textColor="#72ec57"
            android:gravity="center"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/Registid"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/inputbackgroud"
            android:hint="@string/name1"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:textColorHint="#57e961"
            android:textSize="14sp"></EditText>

    </LinearLayout>
    <LinearLayout android:id="@+id/password1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/name1">
        <TextView android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:textColor="#a8f992"
            android:height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/textbackground"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/passwordregist"/>
        <EditText android:id="@+id/textpassword1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:background="@drawable/inputbackgroud"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:hint="@string/password1"
            android:textColorHint="#9df59a"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:text="@string/passwordRegistconfirm"
            android:textColor="#9fe481"
            android:gravity="center"
            android:background="@drawable/textbackground"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/Confirmpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:background="@drawable/inputbackgroud"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password1"
            android:textColorHint="#affa98" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="149dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_pressed"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:maxLines="1"
            android:text="注册"
            android:textSize="18dp" />
    </LinearLayout>
</RelativeLayout>