<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout tools:context=".RegistActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/backrpwd"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:text="账 号"
            android:textColor="#b9f29f"
            android:gravity="center"
            android:background="@drawable/textbackground"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/REPWDid"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/inputbackgroud"
            android:hint="@string/name1"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:textColorHint="#ce1f1f"
            android:textSize="14sp"></EditText>

    </LinearLayout>
    <LinearLayout android:id="@+id/RPWDpassword1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/name1">
        <TextView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:text="密 码"
            android:textColor="#a6f58b"
            android:gravity="center"
            android:background="@drawable/textbackground"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textSize="14dp" />
        <EditText android:id="@+id/RPWDpassword"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:background="@drawable/inputbackgroud"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:hint="@string/password1"
            android:textColorHint="#ce1f1f"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:text="新密码"
            android:textColor="#79fa79"
            android:gravity="center"
            android:background="@drawable/textbackground"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/REPWDpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:padding="10dp"
            android:background="@drawable/inputbackgroud"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginRight="10dp"
            android:hint="@string/password1"
            android:textColorHint="#e73838" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"


        android:layout_marginBottom="149dp"
        android:orientation="horizontal">

        <Button

            android:id="@+id/RPWDbtn_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:background="@drawable/btn_pressed"
            android:layout_marginTop="300dp"
            android:maxLines="1"
            android:text="@string/Confirm"
            android:textSize="18dp" />
    </LinearLayout>
</RelativeLayout>