<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="RtlSymmetry"
    android:orientation="vertical"
    android:background="@color/main_bg"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<TextView
    android:background="@null"
    android:layout_height="40dp"
    android:layout_width="match_parent"
    android:textSize="15sp"
    android:textColor="@color/select_title_text"
    android:text="@string/select_date"
    android:paddingStart="15dp"
    android:gravity="center_vertical"/>
<LinearLayout
    android:id="@+id/ll_date"
    android:orientation="horizontal"
    android:background="@color/current_time_bg"
    android:layout_height="50dp"
    android:layout_width="match_parent"
    android:gravity="center_vertical">
    <TextView
        android:background="@null"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/current_time_text"
        android:text="@string/current_date"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/tv_selected_date"
        android:background="@null"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/selected_time_text"
        android:gravity="center_vertical"
        android:layout_marginEnd="15dp"/>
</LinearLayout>
<TextView
    android:background="@null"
    android:layout_height="40dp"
    android:layout_width="match_parent"
    android:textSize="15sp"
    android:textColor="@color/select_title_text"
    android:text="@string/select_time"
    android:paddingStart="15dp"
    android:gravity="center_vertical"/>
<LinearLayout
    android:id="@+id/ll_time"
    android:orientation="horizontal"
    android:background="@color/current_time_bg"
    android:layout_height="50dp"
    android:layout_width="match_parent"
    android:gravity="center_vertical">
    <TextView
        android:background="@null"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/current_time_text"
        android:text="执行时间"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"/>
    <Space
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_selected_time"
        android:background="@null"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/selected_time_text"
        android:gravity="center_vertical"
        android:layout_marginEnd="15dp"/>

</LinearLayout>
    <TextView
        android:background="@null"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:textColor="@color/select_title_text"
        android:text="执行温度（℃）"
        android:paddingStart="15dp"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:background="#ffff"
        android:layout_width="match_parent">
        <Switch
            android:id="@+id/on_off_iot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textSize="12dp"
            android:text="  开关" />
        <EditText
            android:id="@+id/input_temp"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:background="#ffff"
            android:layout_weight="0.35"
            android:maxLines="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="13dp"
            android:textAlignment="center"
            android:inputType="number"
            android:padding="8dp"
            android:hint=" 请输入目标温度"/>

        <Switch
            android:id="@+id/switchiotcmd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textSize="13dp"
            android:text="保温" />

        <Button
            android:id="@+id/button_cmd1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/btn_pressed"
            android:text="执行"
            android:layout_marginRight="5dp"
            android:textColor="#fff" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text=""
        android:paddingBottom="5dp"
        android:gravity="center"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_marginBottom="10dp"
       android:layout_marginLeft="10dp"
       android:background="#ffff"
      android:layout_marginTop="5dp"
       android:orientation="vertical"
       android:layout_marginRight="10dp"
       android:layout_height="match_parent">
       <!--<android.support.v7.widget.RecyclerView
           android:id="@+id/iotcmd"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           /> -->
       <!--<ImageView
           android:id="@+id/imageView"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:src="@drawable/pei" />-->
       <cn.edu.cqupt.my.LineView
           android:id="@+id/line"
           android:layout_centerInParent="true"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="#fff"
           />
   </LinearLayout>

</LinearLayout>